--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Sam Website</title>
         <link rel="stylesheet"
-            href="C:\Users\Japhia1\Documents\My-site\CSS - My site\Styles22.css">
+            href="Styles22.css">
         <link rel="icon" href="C:\Users\Japhia1\Documents\Bacon\favicon.ico">
         <link
             href="https://fonts.googleapis.com/css2?family=Englebert&family=Kreon&display=swap"
