--- a/index2.html
+++ b/index2.html
@@ -82,7 +82,7 @@
                     src="./Images/linkedin.png"
                     alt="LinkedIn"></a>
             <a class="Github" href="https://github.com/SamJaphia"><img
-                    src="./Images/Github.png" alt="Githubb"></a>
+                    src="./Images/Github.png" alt="Github"></a>
             <p class="mant-icon">©Mantivations</p>
         </div>
 
